--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -9,15 +9,18 @@
             Please create one to continue.
           </p>
         </div>
-        <button mat-raised-button [routerLink]="['./initiate-po']" class="main-background-color main-button color-white"
-          matTooltip="Issue P.O. to supplier without Request For Quotations">
+        <button
+          mat-raised-button
+          [routerLink]="['./initiate-po']"
+          class="main-background-color main-button color-white"
+          matTooltip="Issue P.O. to supplier without Request For Quotations"
+        >
           Create P.O.
         </button>
       </div>
     </div>
   </div>
-  <div class="p-b-20 min-height parent create-po-dashboard"
-    *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
+  <div class="p-b-20 min-height parent create-po-dashboard" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
     <div class="row">
       <div class="col-xs-7">
         <mat-form-field class="example-form-field border-input project p-l-10">
@@ -27,9 +30,13 @@
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : '' ">
-        <button mat-raised-button class="main-background-color main-button color-white demo-title"
-          [routerLink]="['./initiate-po']" matTooltip="Issue P.O. to supplier without Request For Quotations">
+      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : ''">
+        <button
+          mat-raised-button
+          class="main-background-color main-button color-white demo-title"
+          [routerLink]="['./initiate-po']"
+          matTooltip="Issue P.O. to supplier without Request For Quotations"
+        >
           Create P.O.
         </button>
       </div>
@@ -148,8 +155,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Total Material">
-                  <th mat-header-cell class="text-align-center" *matHeaderCellDef class="text-align-center">Total
-                    Material</th>
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef class="text-align-center">Total Material</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
                     {{ element.totalMaterials }}
                   </td>
@@ -157,21 +163,20 @@
 
                 <ng-container matColumnDef="PO Amount">
                   <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount</th>
-                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }}
-                    {{ element.currencyCode }}</td>
+                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef></th>
                   <td mat-cell class="text-align-center actions-cell" *matCellDef="let element">
                     <span class="p-r-10">
-                      <a href="javascript:void(0)" style="color: #f47721;"
-                        [routerLink]="['./po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
+                      <a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
                     </span>
 
                     <span>&nbsp;</span>
-                    <span class="p-r-10 float-right cursor-pointer"><a (click)="downloadPo(element.purchaseOrderId)"
-                        matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a></span>
+                    <span class="p-r-10 float-right cursor-pointer"
+                      ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
+                    ></span>
                   </td>
                 </ng-container>
 
@@ -211,8 +216,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Total Material">
-                  <th mat-header-cell class="text-align-center" *matHeaderCellDef class="text-align-center">Total
-                    Material</th>
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef class="text-align-center">Total Material</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
                     {{ element.totalMaterials }}
                   </td>
@@ -220,20 +224,22 @@
 
                 <ng-container matColumnDef="PO Amount">
                   <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount</th>
-                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }}
-                    {{ element.currencyCode }}</td>
+                  <td mat-cell class="text-right" *matCellDef="let element">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
                   <td mat-cell class="text-align-center" *matCellDef="let element" class="actions-cell">
-                    <span class="p-r-10"><a href="javascript:void(0)" style="color: #f47721;"
-                        [routerLink]="['./po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span>
+                    <span class="p-r-10"
+                      ><a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span
+                    >
                     <span>&nbsp;</span>
-                    <span class="p-r-10 float-right cursor-pointer"><a (click)="deleteDraftedPo(element)"
-                        matTooltip="Delete"> <img src="../../../../assets/images/delete-button.png" /> </a></span>
-                    <span class="p-r-10 float-right cursor-pointer"><a (click)="downloadPo(element.purchaseOrderId)"
-                        matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a></span>
+                    <span class="p-r-10 float-right cursor-pointer"
+                      ><a (click)="deleteDraftedPo(element)" matTooltip="Delete"> <img src="../../../../assets/images/delete-button.png" /> </a
+                    ></span>
+                    <span class="p-r-10 float-right cursor-pointer"
+                      ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
+                    ></span>
                   </td>
                 </ng-container>
 
@@ -286,23 +292,39 @@
 
                 <ng-container matColumnDef="PO Amount">
                   <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount</th>
-                  <td mat-cell *matCellDef="let element" class="text-right">{{ element.poAmount | number: "1.2-2" }}
-                    {{ element.currencyCode }}</td>
+                  <td mat-cell *matCellDef="let element" class="text-right">{{ element.poAmount | number: "1.2-2" }} {{ element.currencyCode }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element" class="actions-cell">
-                    <span class="p-r-10 display-inline-block p-t-5"><a href="javascript:void(0)" style="color: #f47721;"
-                        [routerLink]="['./po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span>
-                    <span class="p-r-10 display-inline-block p-t-5"><a href="javascript:void(0)" style="color: #f47721;"
-                        [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View Receipts</a></span>
-                    <span>&nbsp;</span>
-                    <span class="p-r-10 cursor-pointer"><a (click)="openPaymentRecord(element)"
-                        matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a></span>
-                    <span class="p-r-10 cursor-pointer display-inline-block p-t-5"><a
-                        (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img
-                          src="../../../../assets/images/download-po.png" /> </a></span>
+                    <span class="p-r-10 display-inline-block p-t-5"
+                      ><a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
+                    >
+                    <!-- <span class="p-r-10 display-inline-block p-t-5"
+                      ><a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View Receipts</a></span
+                    > -->
+                    <!-- <span class="p-r-10 cursor-pointer"
+                      ><a (click)="openPaymentRecord(element)" matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a
+                    ></span> -->
+                    <span class="p-r-10 cursor-pointer display-inline-block p-t-5"
+                      ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
+                    ></span>
+
+                    <button mat-icon-button class="main-color" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu" class="removePadding">
+                      <button mat-menu-item class="border-solid height-36-px line-0-px" (click)="viewGrn(element.purchaseOrderId)" matTooltip="Add/View Receipts">
+                        <span> Add/View Receipts</span>
+                      </button>
+                      <button mat-menu-item class="border-solid height-36-px line-0-px" (click)="openPaymentRecord(element)" matTooltip="Payment Record">
+                        <span> Payment Record</span>
+                      </button>
+                      <button mat-menu-item class="height-36-px line-0-px" (click)="copyPo(element.purchaseOrderId)" matTooltip="Copy PO">
+                        <span>Copy PO</span>
+                      </button>
+                    </mat-menu>
 
                     <!-- <span class="p-r-10"
                       ><a style="color: #f47721" href="javascript:void(0)" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
