--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -85,7 +85,7 @@
 
       <ng-container *ngIf="supplierLiabiltyReportData">
         <div class="reportTablePo">
-          <p class="fontsize-14-px p-b-0 p-t-10 m-b-0">*Conversion Rate=INR</p>
+          <p class="fontsize-14-px p-b-0 p-t-10 m-b-0">*Conversion Rate={{ currency }}</p>
 
           <table class="report-table">
             <tr matSort class="mat-elevation-z2 mat-header-row">
