--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -270,6 +270,9 @@
 
 .supplier-bid-imgs{
 
+  max-width: 130px;
+  min-width: 130px;
+
   .images-lists {
     .attached-image{
       position: relative;
