--- a/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
@@ -17,12 +17,16 @@
                 <mat-form-field class="border-select select-project-dropdown w-100">
                     <mat-label>Select Project</mat-label>
                     <mat-select>
-                        <div class="search-project-div">
-                            <input class="p-b-5" matInput type="Search Project..."
-                            placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}"
-                            (keydown)="$event.stopPropagation()" autocomplete="off" />
+                        <div class="search-project-div d-flex align-items-center">
+                            <input class="p-b-5" matInput type="Search Project..." placeholder="Search project Name"
+                                [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}"
+                                (keydown)="$event.stopPropagation()" autocomplete="off" />
+                            <button mat-button matSuffix mat-icon-button>
+                                <mat-icon>search</mat-icon>
+                            </button>
                         </div>
-                        <mat-option *ngFor="let project of allProjectsList | SearchPipe: searchText:['projectName']" [value]="project.projectName" (click)="getProjectMaterials(project.projectId)">
+                        <mat-option *ngFor="let project of allProjectsList | SearchPipe: searchText:['projectName']"
+                            [value]="project.projectName" (click)="getProjectMaterials(project.projectId)">
                             {{project.projectName}}
                         </mat-option>
                     </mat-select>
@@ -30,7 +34,8 @@
             </div>
 
             <div class="col-xs-12 col-md-6 text-right">
-                <button mat-raised-button class="main-background-color main-button color-white" (click)="copySelectedMaterials()">Copy</button>
+                <button mat-raised-button class="main-background-color main-button color-white"
+                    (click)="copySelectedMaterials()">Copy</button>
             </div>
         </div>
 
@@ -50,7 +55,8 @@
                         </th>
                         <td class="text-left" mat-cell *matCellDef="let element"
                             [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-                            <mat-checkbox #ch (change)="getElemenetChecked(ch, element, 'Select')" [checked]="element.checked"
+                            <mat-checkbox #ch (change)="getElemenetChecked(ch, element, 'Select')"
+                                [checked]="element.checked"
                                 [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false">
                                 <div class="limited-character bom" matTooltip=" {{ element.materialName }}">
                                     {{ element.materialName }}
@@ -63,7 +69,7 @@
                             </mat-checkbox>
                         </td>
                     </ng-container>
-    
+
                     <ng-container matColumnDef="unit">
                         <th *matHeaderCellDef class="text-align-center justify-center">
                             Unit
@@ -73,7 +79,7 @@
                             {{ element.materialUnit }}
                         </td>
                     </ng-container>
-    
+
                     <ng-container matColumnDef="estimatedQty">
                         <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
                             Estimated Quantity
@@ -83,7 +89,7 @@
                             {{ element.estimatedQty }}
                         </td>
                     </ng-container>
-    
+
                     <ng-container matColumnDef="unitRate">
                         <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
                             Unit Rate (INR)
@@ -93,23 +99,25 @@
                             {{ element.estimatedRate }}
                         </td>
                     </ng-container>
-                    
+
                     <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
                     <tr mat-row *matRowDef="let element; columns: columnsToDisplay" (click)="toggleRow(element)"></tr>
                 </table>
             </div>
         </ng-container>
-            
+
         <!-- If no project selected then this block will display -->
         <ng-template #noProjectSelected>
             <div class="row py-5">
                 <div class="col-md-4 offset-md-4">
                     <div class="no-project-selected-img text-center mb-4">
-                        <img src="assets/images/no-project-selected.png" alt="No project selected" class="img-fluid w-75" />
+                        <img src="assets/images/no-project-selected.png" alt="No project selected"
+                            class="img-fluid w-75" />
                     </div>
-    
+
                     <div class="no-project-selected-info">
-                        <p class="text-center">You need to select any project to see and copy the materials! Please select the project from the above to proceed.</p>
+                        <p class="text-center">You need to select any project to see and copy the materials! Please
+                            select the project from the above to proceed.</p>
                     </div>
                 </div>
             </div>
