--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -173,7 +173,23 @@
 
                         <!-- Attached Image Column individual Supplier -->
                         <div class="mat-cell maxwidth-10 view-bid-images-preview text-center">
-                          <div *ngIf="supplier?.documentList?.length" class="images-lists" [ngClass]="supplier.documentList.length === 1 ? 'single-image' : (supplier.documentList.length === 2 ? 'double-images' : 'triple-images')"
+
+                          <ng-container *ngIf="supplier?.documentList?.length; else defaultImage">
+                            <div class="images-lists" [ngClass]="supplier.documentList.length === 1 ? 'single-image' : (supplier.documentList.length === 2 ? 'double-images' : 'triple-images')"
+                            (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)">
+                              <ng-container *ngFor="let img of supplier.documentList; let i = index">
+                                <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                              </ng-container>
+                            </div>
+                          </ng-container>
+                          
+                          <ng-template #defaultImage>
+                            <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                          </ng-template> 
+                          
+
+
+                          <!-- <div *ngIf="supplier?.documentList?.length" class="images-lists" [ngClass]="supplier.documentList.length === 1 ? 'single-image' : (supplier.documentList.length === 2 ? 'double-images' : 'triple-images')"
                             (click)="viewAllImages(material.materialId, supplier.supplierId, project.projectId)">
                             <ng-container *ngFor="let img of supplier.documentList; let i = index">
                               <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
@@ -182,7 +198,7 @@
               
                           <ng-container *ngIf="!supplier?.documentList">
                             <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
-                          </ng-container> 
+                          </ng-container>  -->
                         </div>
                       </div>
                     </ng-container>
