--- a/src/app/shared/dialogs/view-image/view-image.component.html
+++ b/src/app/shared/dialogs/view-image/view-image.component.html
@@ -6,19 +6,27 @@
         <span>&times;</span>
       </button>
 
-      <ngb-carousel *ngIf="selectedImages?.length">        
+      <ngb-carousel *ngIf="selectedImages?.length" (mouseenter)="addRemoveOverlay($event)" (mouseleave)="addRemoveOverlay($event)">        
         <ng-container *ngFor="let image of selectedImages">
           <ng-template ngbSlide>
-            <img src="assets/images/download-icon-lg.svg" class="cursor-pointer download-link" (click)="downloadImage(image.documentShortUrl, image.documentUrl)" />
+            <!-- <img src="assets/images/download-icon-lg.svg" class="cursor-pointer download-link" (click)="downloadImage(image.documentShortUrl, image.documentUrl)" /> -->
             <div class="picsum-img-wrapper">
               <ng-container *ngIf="image.documentUrl">
                 <img [src]=image.documentUrl alt="Random first slide" class="img-fluid">
               </ng-container>
             </div>
-
+            
             <div class="carousel-caption">
+              <ng-container *ngIf="isAddOpacity">
+                <img src="assets/images/download-icon-lg.svg" class="cursor-pointer download-white-icon" 
+                  (click)="downloadImage(image.documentShortUrl, image.documentUrl)" />
+              </ng-container>
+              
               <h4>{{ image.documentDesc }}</h4>
+              <p>Uploaded by {{ image.supplierId ? 'you' : 'contractor' }}</p>
             </div>
+
+            <div class="carousel-overlay" *ngIf="isAddOpacity"></div>
           </ng-template>
         </ng-container>
       </ngb-carousel>
