po page alignment

--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -156,7 +156,7 @@
   
                     <!-- Upload Image Section -->
                     <div class="upload-image-section mgtn12">
-                      <a class="p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(material, 'supplier')">
+                      <a class="cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(material, 'supplier')">
                         <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
                       </a>
                   </div>
