--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -401,19 +401,26 @@ s .validTill {
   min-width: 8.3% !important;
 }
 
-.international-view-po,
 .national-edit-po{
   max-width: 9.2%;
   min-width: 9.2% !important;
 }
 
+.international-view-po,
 .national-view-po{
   max-width: 9.5%;
   min-width: 9.5% !important;
 }
 
-.po-date-width.date-label .mat-form-field-label-wrapper{
-  top: -.84375em;
+.po-date-width .date-label{
+  
+  .mat-form-field-label-wrapper{
+    top: -.84375em;
+  }
+
+  .form-placeholder {
+    font-size: 13px;
+  }
 }
 
 @media only screen and (max-width: 1199px){
