--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -429,4 +429,10 @@ s .validTill {
       font-size: 13px;
     }
   }
+
+  .po-date-width .date-label{
+    .form-placeholder {
+      font-size: 12px;
+    }
+  }
 }
