--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="this.form" [formGroup]="this.form" (ngSubmit)="onSubmit()">
+<form *ngIf="this.form" [formGroup]="this.form" (ngSubmit)="onSubmit()" autocomplete="off">
   <div class="row">
     <span class="col-md-3 col-xs-6 display-flex">
       <span>
