--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -19,16 +19,21 @@
 
   <div class="create-po-dashboard p-b-20 min-height parent"
     *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp || rfqCount > 0">
-    <div class="row">
-      <div class="col-xs-7">
-        <mat-form-field class="example-form-field border-input project w-vw-14">
+    <div class="row" [ngClass]="isMobile">
+      <div class="col-xs-6">
+        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : ' w-vw-14' ">
           <input matInput placeholder="Search RFQ" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1' : '' ">
+      <div class="text-right col-xs-6 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex' : '' ">
+        <ng-container *ngIf="isMobile">
+          <button mat-button class="fltr-btn brand-color">
+            <mat-icon inline="true">filter_list</mat-icon>
+          </button>
+        </ng-container>
         <button mat-raised-button class="main-background-color main-button color-white demo-title"
           (click)="createRfq()">
           Create RFQ
@@ -37,9 +42,12 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2">
-        <advance-search filterType="rfq"></advance-search>
-      </div>
+
+      <ng-container *ngIf="!isMobile">
+        <div class="col-md-2">
+          <advance-search filterType="rfq"></advance-search>
+        </div>
+      </ng-container>
 
       <div class="col-md-10">
         <div class="rfq-list-detail-custom">
