--- a/src/app/shared/components/advance-search/advance-search.component.html
+++ b/src/app/shared/components/advance-search/advance-search.component.html
@@ -36,7 +36,9 @@
                     <li *ngFor="let option of projectsSelect.selected" class="d-flex justify-content-between">
                         {{getValueWithMaxWidth({fval: option.value.projectName})}}
                         <span class="font-size20">
-                            <mat-icon (click)="removeId(option.value.projectId, 'projects')" inline="true">close
+                            <mat-icon
+                                (click)="removeId(option.value.projectId, 'projects'); searchValue(option.value, 'projects')"
+                                inline="true">close
                             </mat-icon>
                         </span>
                     </li>
@@ -76,10 +78,12 @@
 
             <ng-container *ngIf="suppliersSelect.selected">
                 <ul class="selected-list">
-                    <li *ngFor="let option of suppliersSelect.selected" class="d-flex  justify-content-between">
+                    <li *ngFor="let option of suppliersSelect.selected" class="d-flex justify-content-between">
                         {{getValueWithMaxWidth({fval: option.value.supplier_name})}}
                         <span class="font-size20">
-                            <mat-icon (click)="removeId(option.value.supplierId, 'suppliers')" inline="true">close
+                            <mat-icon
+                                (click)="removeId(option.value.supplierId, 'suppliers'); searchValue(option.value, 'suppliers')"
+                                inline="true">close
                             </mat-icon>
                         </span>
                     </li>
@@ -120,10 +124,12 @@
 
             <ng-container *ngIf="materialsSelect.selected">
                 <ul class="selected-list">
-                    <li *ngFor="let option of materialsSelect.selected" class="d-flex  justify-content-between">
+                    <li *ngFor="let option of materialsSelect.selected" class="d-flex justify-content-between">
                         {{getValueWithMaxWidth({fval: option.value.materialName})}}
                         <span class="font-size20">
-                            <mat-icon (click)="removeId(option.value.materialCode, 'materials')" inline="true">close
+                            <mat-icon
+                                (click)="removeId(option.value.materialCode, 'materials'); searchValue(option.value, 'materials')"
+                                inline="true">close
                             </mat-icon>
                         </span>
                     </li>
@@ -144,10 +150,10 @@
             </mat-expansion-panel-header>
 
             <section class="example-section pb-2">
-                <mat-checkbox class="example-margin"
+                <mat-checkbox class="example-margin d-block"
                     (change)="checkSubmitNotSubmit($event.checked, '0', bidSubmitted, notSubmitted)" #bidSubmitted>Bid
                     Submitted</mat-checkbox>
-                <mat-checkbox class="example-margin"
+                <mat-checkbox class="example-margin d-block"
                     (change)="checkSubmitNotSubmit($event.checked, '1', bidSubmitted, notSubmitted)" #notSubmitted>Not
                     Submitted</mat-checkbox>
             </section>
@@ -184,18 +190,18 @@
 
             <ng-container *ngIf="usersSelect.selected">
                 <ul class="selected-list">
-                    <li *ngFor="let option of usersSelect.selected" class="d-flex  justify-content-between">
+                    <li *ngFor="let option of usersSelect.selected" class="d-flex justify-content-between">
                         {{getValueWithMaxWidth({fval: option.value.ProjectUser.firstName, sval: option.value.ProjectUser.lastName})}}
                         <span class="font-size20">
-                            <mat-icon (click)="removeId(option.value.ProjectUser.userId, 'users')" inline="true">close
+                            <mat-icon
+                                (click)="removeId(option.value.ProjectUser.userId, 'users'); searchValue(option.value, 'users')"
+                                inline="true">close
                             </mat-icon>
                         </span>
                     </li>
                 </ul>
 
             </ng-container>
-
-
 
         </mat-expansion-panel>
     </div>
@@ -208,14 +214,14 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="w-100">
                 <mat-label>From</mat-label>
                 <input matInput [matDatepicker]="raisedFromPicker" (dateChange)="getDate($event, 'raisedFromPicker')">
                 <mat-datepicker-toggle matSuffix [for]="raisedFromPicker"></mat-datepicker-toggle>
                 <mat-datepicker #raisedFromPicker></mat-datepicker>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="w-100">
                 <mat-label>To</mat-label>
                 <input matInput [matDatepicker]="raisedToPicker" (dateChange)="getDate($event, 'raisedToPicker')">
                 <mat-datepicker-toggle matSuffix [for]="raisedToPicker"></mat-datepicker-toggle>
@@ -233,14 +239,14 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="w-100">
                 <mat-label>From</mat-label>
                 <input matInput [matDatepicker]="expiryFromPicker" (dateChange)="getDate($event, 'expiryFromPicker')">
                 <mat-datepicker-toggle matSuffix [for]="expiryFromPicker"></mat-datepicker-toggle>
                 <mat-datepicker #expiryFromPicker></mat-datepicker>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" class="w-100">
                 <mat-label>To</mat-label>
                 <input matInput [matDatepicker]="expiryToPicker" (dateChange)="getDate($event, 'expiryToPicker')">
                 <mat-datepicker-toggle matSuffix [for]="expiryToPicker"></mat-datepicker-toggle>
@@ -251,7 +257,7 @@
         </mat-expansion-panel>
     </div>
 
-    <div class="actions text-align-center p-10">
+    <div class="actions text-align-center p-10 justify-content-between">
         <button mat-button class="bordered-button mr-2" (click)="getFilterExportRequest()">
             Export
         </button>
