--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -606,7 +606,7 @@ ngx-mat-drp-picker-overlay {
     line-height: 26px !important;
   }
   .main-button.mat-button-base {
-    min-width: 80px;
+    min-width: auto;
     max-height: 30px;
   }
 }
@@ -649,4 +649,13 @@ input::title {
 }
 .border-solid {
   border-bottom: 1px solid;
+}
+
+
+.fltr-btn{
+  font-size: 30px !important;
+    min-width: auto !important;
+    line-height: 18px !important;
+    padding: 0 10px !important;
+    margin-top: -8px !important;
 }
